--- a/Atlas/docker-compose.yml
+++ b/Atlas/docker-compose.yml
@@ -20,6 +20,6 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./app:/usr/share/nginx/html
+      - ./app/equipes/Equipe1:/usr/share/nginx/html
     restart: always
  
