--- a/Atlas/app/equipes/Equipe3/docker-compose.yml
+++ b/Atlas/app/equipes/Equipe3/docker-compose.yml
@@ -1,8 +1,10 @@
+version: '3.8'
+
 services:
   tp3:
     image: nginx
     ports:
       - 7000:80
     volumes:
-      - ./TP3/Atlas/app/equipes/Equipe3:/usr/share/nginx/html:ro
+      - ./app/equipes/Equipe3/app:/usr/share/nginx/html:ro
     restart: always
